--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "libgenmics"
-version = "0.1.0"
+version = "0.1.1"
 description = "Comics toolkit"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -10,7 +10,7 @@ authors = [
 
 dependencies = [
     "requests",
-    "pydantic",
+    "pydantic<2",
     "beautifulsoup4",
     "rarfile"
 ]
